--- a/src/styles/scss/pages/_contact.scss
+++ b/src/styles/scss/pages/_contact.scss
@@ -1,19 +1,22 @@
 /**********************
 Contact Page
 **********************/
-.contact-page {
+.contact-page-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 500px;
-  p {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    &:hover {
-      transform: scale(0.98);
+  height: 50%;
+  width: 100%;
+  article {
+    a {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      &:hover {
+        opacity: 0.7;
+      }
     }
     svg {
       background-color: $accentColor;
