--- a/src/styles/scss/pages/_home.scss
+++ b/src/styles/scss/pages/_home.scss
@@ -1,67 +1,78 @@
 /**********************
 Home Page
 **********************/
-.home {
+.home-page-container {
+  //Center Home Page content
   position: relative;
-}
-.home-intro {
-  width: 80%;
-  height: 50%;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  margin: auto;
-  text-align: center;
-  z-index: 2;
-  color: #eee;
-
-  h1 {
-    font-size: 4rem;
-    letter-spacing: 2px;
-    margin-bottom: 1rem;
-  }
-  p:first-of-type {
-    font-size: 1.7rem;
-    margin-bottom: 4rem;
-    position: relative;
-    &::after {
-      content: "";
-      width: 180px;
-      height: 4px;
-      background-color: $accentColor;
-      position: absolute;
-      bottom: -15px;
-      left: 0;
-      right: 0;
-      margin: auto;
-    }
-  }
-  p:last-of-type {
-    font-size: 1.3rem;
-    padding-bottom: 5rem;
-  }
-  &-btns {
-    display: flex;
-    margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  header {
     width: 80%;
-    justify-content: space-evenly;
-    a {
-      border: 3px solid $accentColor;
-      border-radius: 5px;
-      padding: 14px;
-      transition: all 0.2s linear;
-      font-size: 1.2rem;
-      &:hover {
-        transform: scale(1.1);
-      }
+    display: flex;
+    flex-direction: column;
+    height: 60%;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    text-align: center;
+    z-index: 2;
+    color: $abs-white;
+    //Home Content flex sizes
+    h1,
+    p {
+      height: 30%;
     }
-    a:first-of-type {
-      background-color: $accentColor;
-      &:hover {
-        background-color: transparent;
-      }
+    div {
+      height: 10%;
+    }
+    h1 {
+      letter-spacing: 2px;
+    }
+  }
+  figure {
+    height: 100%;
+    width: 100%;
+    padding: 10px;
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+    &::after {
+      outline: 1px solid white;
+      outline-offset: -10px;
+      content: "";
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: calc(100% - 20px);
+      height: calc(100% - 20px);
+      background-color: rgba($color: #000000, $alpha: 0.65);
+      z-index: 1;
+    }
+  }
+}
+.home-page-btns {
+  display: flex;
+  margin: auto;
+  width: 100%;
+  max-width: 700px;
+  justify-content: space-around;
+  align-items: center;
+  a {
+    border: 3px solid $accentColor;
+    border-radius: 5px;
+    padding: 0.5rem 1px;
+    transition: all 0.2s linear;
+    &:hover {
+      transform: scale(1.1);
+    }
+  }
+  a:first-of-type {
+    background-color: $accentColor;
+    &:hover {
+      background-color: transparent;
     }
   }
 }
