--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -123,11 +123,11 @@ All Pages (NOT HOME)
       color: $abs-white;
       letter-spacing: 2px;
       text-align: center;
-      padding: 1rem 0;
+      padding: 1rem;
       max-width: 200px;
       background-color: rgba($color: $abs-white, $alpha: 0.2);
       outline: 1px solid $abs-black;
-      outline-offset: -10px;
+      outline-offset: -0.5rem;
     }
   }
   /* All Pages - Header Images */
@@ -157,8 +157,8 @@ All Pages (NOT HOME)
   }
 }
 .page-content {
-  padding: 1rem 50px;
-  height: calc(100% - 320px);
+  padding: 1rem;
+  height: calc(100% - 30%);
 }
 /*******************************/
 
