--- a/src/styles/scss/pages/_about.scss
+++ b/src/styles/scss/pages/_about.scss
@@ -1,35 +1,38 @@
 /**********************
 About Page
 **********************/
+#frameByFrameImg {
+  display: none;
+  position: absolute;
+  top: 0.5rem;
+  right: 1rem;
+  width: 160px;
+  height: 140px;
+  outline: 6px solid $accentColor;
+  outline-offset: -6px;
+  box-shadow: 1px 1px 10px 1px $abs-black;
+}
 .about-page-content {
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
-  #frameByFrameImg {
-    display: none;
-    position: absolute;
-    top: 3rem;
-    right: 3rem;
-    width: 180px;
-    height: 160px;
-    outline: 6px solid $accentColor;
-    outline-offset: -6px;
-    box-shadow: 1px 1px 10px 1px $abs-black;
-  }
+  // justify-content: center;
+  overflow: hidden auto;
   h4 {
-    border-left: 8px solid $accentColor;
-    width: 70%;
-    max-width: 750px;
-    padding: 10px;
+    border-left: 0.4rem solid $accentColor;
+    width: 100%;
+    padding-left: 10px;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
   }
   section {
     text-align: left;
-    margin: 20px auto 2rem 50px;
-    width: 70%;
+    // margin: 20px auto 2rem 50px;
+    // width: 70%;
+    width: 100%;
     p:not(:first-of-type) {
-      margin-left: 50px;
-      margin-top: 1rem;
+      // margin-left: 50px;
+      margin-top: 0.4rem;
     }
     em {
       font-weight: 600;
